fix application installation defaulting
* make app namespace field in application installation crd optional
* change app namespace field in that crd to pointer
** a pointer is easier to check than a struct and it is then similar to the app definition field
* add defaulting of app namespace in application installation to mutation webhook

Signed-off-by: soer3n <srenhenning@googlemail.com>

--- a/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationdefinitions.yaml
+++ b/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationdefinitions.yaml
@@ -107,7 +107,7 @@ spec:
                         Name is the namespace to deploy the Application into.
                         Should be a valid lowercase RFC1123 domain name
                       maxLength: 63
-                      pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
+                      pattern: ^(|[a-z0-9]([-a-z0-9]*[a-z0-9])?(\\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*)
                       type: string
                   required:
                     - create
