--- a/pkg/ee/default-application-catalog/applicationdefinitions/cert-manager-app.yaml
+++ b/pkg/ee/default-application-catalog/applicationdefinitions/cert-manager-app.yaml
@@ -41,6 +41,13 @@ spec:
           chartVersion: v1.14.1
           url: https://charts.jetstack.io
     version: v1.14.1
+  - template:
+      source:
+        helm:
+          chartName: cert-manager
+          chartVersion: v1.16.3
+          url: https://charts.jetstack.io
+    version: v1.16.3
   defaultValuesBlock: |
     installCRDs: true
   documentationURL: https://cert-manager.io/
