--- a/pkg/ee/default-application-catalog/applicationdefinitions/k8sgpt-app.yaml
+++ b/pkg/ee/default-application-catalog/applicationdefinitions/k8sgpt-app.yaml
@@ -34,6 +34,13 @@ spec:
             chartVersion: 0.1.0
             url: https://charts.k8sgpt.ai/
       version: v0.3.26
+    - template:
+        source:
+          helm:
+            chartName: k8sgpt-operator
+            chartVersion: 0.1.0
+            url: https://charts.k8sgpt.ai/
+        version: v0.3.48
   defaultValuesBlock: |
     serviceMonitor:
       enabled: false
