--- a/pkg/ee/default-application-catalog/applicationdefinitions/nvidia-gpu-operator-app.yaml
+++ b/pkg/ee/default-application-catalog/applicationdefinitions/nvidia-gpu-operator-app.yaml
@@ -34,6 +34,13 @@ spec:
             chartVersion: v23.9.1
             url: https://helm.ngc.nvidia.com/nvidia
       version: v23.9.1
+    - template:
+        source:
+          helm:
+            chartName: gpu-operator
+            chartVersion: v24.9.1
+            url: https://helm.ngc.nvidia.com/nvidia
+      version: v24.9.1
   defaultValuesBlock: |
     node-feature-discovery:
       fullnameOverride: gpu-operator-node-feature-discovery
