--- a/pkg/ee/default-application-catalog/applicationdefinitions/flux2-app.yaml
+++ b/pkg/ee/default-application-catalog/applicationdefinitions/flux2-app.yaml
@@ -41,6 +41,13 @@ spec:
           chartVersion: 2.12.2
           url: https://fluxcd-community.github.io/helm-charts
     version: 2.2.2
+  - template:
+      source:
+        helm:
+          chartName: flux2
+          chartVersion: 2.14.1
+          url: https://fluxcd-community.github.io/helm-charts
+    version: 2.4.0
   documentationURL: https://fluxcd.io/
   sourceURL: https://github.com/fluxcd-community/helm-charts
   logo: |+
