--- a/docs/zz_generated.seed.ee.yaml
+++ b/docs/zz_generated.seed.ee.yaml
@@ -215,15 +215,16 @@ spec:
               # Regions represents a larger domain, made up of one or more zones. It is uncommon for Kubernetes clusters
               # to span multiple regions
               regions: null
-              # VolumeProvisioner indicates whether this storage class will be used by the Containerized Data Importer to create the
-              # VM disk image and/or will be used by the KubeVirt CSI Driver to create volumes in the infra cluster. If this value
-              # isn't set for any storage class in the seed object, that storage class will be used by both, CDI to create disk
-              # images for the VMs or the CSI driver to create and attach volumes. If the value is set to csi-storage-target, the
-              # storage class cannot be used as a vm disk image by CDI.
-              volumeProvisioner: ""
               # VolumeBindingMode indicates how PersistentVolumeClaims should be provisioned and bound. When unset,
               # VolumeBindingImmediate is used.
               volumeBindingMode: null
+              # VolumeProvisioner The **Provider** field specifies whether a storage class will be utilized by the Containerized
+              # Data Importer (CDI) to create VM disk images and/or by the KubeVirt CSI Driver to provision volumes in the
+              # infrastructure cluster. If no storage class in the seed object has this value set, the storage class will be used
+              # for both purposes: CDI will create VM disk images, and the CSI driver will provision and attach volumes in the user
+              # cluster. However, if the value is set to `kubevirt-csi-driver`, the storage class cannot be used by CDI for VM disk
+              # image creation.
+              volumeProvisioner: ""
               # Zones represent a logical failure domain. It is common for Kubernetes clusters to span multiple zones
               # for increased availability
               zones: null
