--- a/hack/reconciling.yaml
+++ b/hack/reconciling.yaml
@@ -39,6 +39,8 @@ resourceTypes:
   - { package: k8c.io/kubermatic/v2/pkg/apis/kubermatic/v1, resourceName: GroupProjectBinding }
   - { package: k8c.io/kubermatic/v2/pkg/apis/kubermatic/v1, resourceName: IPAMAllocation }
   - { package: k8c.io/kubermatic/v2/pkg/apis/kubermatic/v1, resourceName: KubermaticConfiguration }
+  - { package: k8c.io/kubermatic/v2/pkg/apis/kubermatic/v1, resourceName: PolicyBinding }
+  - { package: k8c.io/kubermatic/v2/pkg/apis/kubermatic/v1, resourceName: PolicyTemplate }
   - { package: k8c.io/kubermatic/v2/pkg/apis/kubermatic/v1, resourceName: Preset }
   - { package: k8c.io/kubermatic/v2/pkg/apis/kubermatic/v1, resourceName: Project }
   - { package: k8c.io/kubermatic/v2/pkg/apis/kubermatic/v1, resourceName: ResourceQuota }
