--- a/charts/gitops/kkp-argocd-apps/templates/argocd-apps-kkp-core.yaml
+++ b/charts/gitops/kkp-argocd-apps/templates/argocd-apps-kkp-core.yaml
@@ -101,6 +101,13 @@ spec:
   syncPolicy:
     syncOptions:
       - CreateNamespace=true
+      - Retry=true
+    retry:
+      limit: 5
+      backoff:
+        duration: 5s
+        factor: 2
+        maxDuration: 3m
   {{- if .Values.nginx.autoSync }}
     automated: {}
   {{ end }}
@@ -184,7 +191,7 @@ spec:
     path: '{{ .Values.environment }}'
     directory:
       recurse: true
-      exclude: 'values.yaml,{{ .Values.userMlaValuesFileName }}'
+      exclude: '{**/values.yaml,**/{{ .Values.userMlaValuesFileName }},**/k8cConfig.yaml}'
       include: '{common/*,{{ .Values.seed }}/*}'
   destination:
     server: 'https://kubernetes.default.svc'
