small fix to iap chart which started showing dex consent screen after upgrade of chart in 2.26

--- a/charts/iap/templates/configmaps.yaml
+++ b/charts/iap/templates/configmaps.yaml
@@ -20,6 +20,9 @@ metadata:
   name: iap-{{ .name }}-configmap
 data:
   config.toml: |
+{{- if eq $.Values.iap.approval_prompt "none"}}
+    approval_prompt = "none"
+{{- end }}
 {{- with .config }}
 {{ toToml . | indent 4 }}
 {{ end }}
