--- a/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticconfigurations.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticconfigurations.yaml
@@ -339,6 +339,13 @@ spec:
                           type: object
                       type: object
                   type: object
+                mirrorImages:
+                  description: |-
+                    MirrorImages specifies the list of images to be mirrored during installation or update.
+                    Each entry should be in the format "repository:tag".
+                  items:
+                    type: string
+                  type: array
                 proxy:
                   description: |-
                     Proxy allows to configure Kubermatic to use proxies to talk to the
