--- a/addons/csi/kubevirt/csi-driver-operator.yaml
+++ b/addons/csi/kubevirt/csi-driver-operator.yaml
@@ -364,6 +364,10 @@ spec:
             - /manager
           args:
             - --leader-elect
+{{- if .Cluster.CSI.OverwriteRegistry }}
+            - --overwrite-registry
+            - .Cluster.CSI.OverwriteRegistry
+{{- end }}
           securityContext:
             allowPrivilegeEscalation: false
           livenessProbe:
