reformat go template Signed-off-by: moadqassem <moad.qassem@gmail.com>
Signed-off-by: moadqassem <moad.qassem@gmail.com>

--- a/addons/csi/kubevirt/csi-driver-operator.yaml
+++ b/addons/csi/kubevirt/csi-driver-operator.yaml
@@ -364,9 +364,9 @@ spec:
             - /manager
           args:
             - --leader-elect
-{{- if .Cluster.CSI.OverwriteRegistry }}
+{{- with .Cluster.CSI.OverwriteRegistry }}
             - --overwrite-registry
-            - .Cluster.CSI.OverwriteRegistry
+            - {{ . }}
 {{- end }}
           securityContext:
             allowPrivilegeEscalation: false
