--- a/docs/zz_generated.kubermaticConfiguration.ee.yaml
+++ b/docs/zz_generated.kubermaticConfiguration.ee.yaml
@@ -147,7 +147,7 @@ spec:
       requests:
         cpu: 200m
         memory: 128Mi
-  # MirrorImages specifies the list of images to be mirrored during installation or update.
+  # MirrorImages is a list of container images that will be mirrored with the `kubermatic-installer mirror-images` command.
   # Each entry should be in the format "repository:tag".
   mirrorImages: null
   # Proxy allows to configure Kubermatic to use proxies to talk to the
