Add option to overwrite images in addons (#14142)
* add kubevirt csi option overwrite images
Signed-off-by: moadqassem <moad.qassem@gmail.com>

Signed-off-by: moadqassem <moad.qassem@gmail.com>

* generate code
Signed-off-by: moadqassem <moad.qassem@gmail.com>

Signed-off-by: moadqassem <moad.qassem@gmail.com>

* bump kubevirt csi driver operator to 0.4.2
Signed-off-by: moadqassem <moad.qassem@gmail.com>

Signed-off-by: moadqassem <moad.qassem@gmail.com>

* adding docs .4.2
Signed-off-by: moadqassem <moad.qassem@gmail.com>

Signed-off-by: moadqassem <moad.qassem@gmail.com>

* reformat go template
Signed-off-by: moadqassem <moad.qassem@gmail.com>

Signed-off-by: moadqassem <moad.qassem@gmail.com>

---------

Signed-off-by: moadqassem <moad.qassem@gmail.com>

--- a/addons/csi/kubevirt/csi-driver-operator.yaml
+++ b/addons/csi/kubevirt/csi-driver-operator.yaml
@@ -358,12 +358,16 @@ spec:
         runAsNonRoot: true
       containers:
         - name: manager
-          image: {{ Image "quay.io/kubermatic/kubevirt-csi-driver-operator:v0.4.1" }}
+          image: {{ Image "quay.io/kubermatic/kubevirt-csi-driver-operator:v0.4.2" }}
           imagePullPolicy: Always
           command:
             - /manager
           args:
             - --leader-elect
+{{- with .Cluster.CSI.OverwriteRegistry }}
+            - --overwrite-registry
+            - {{ . }}
+{{- end }}
           securityContext:
             allowPrivilegeEscalation: false
           livenessProbe:
