--- a/docs/zz_generated.kubermaticConfiguration.ce.yaml
+++ b/docs/zz_generated.kubermaticConfiguration.ce.yaml
@@ -147,6 +147,9 @@ spec:
       requests:
         cpu: 200m
         memory: 128Mi
+  # MirrorImages is a list of container images that will be mirrored with the `kubermatic-installer mirror-images` command.
+  # Each entry should be in the format "repository:tag".
+  mirrorImages: null
   # Proxy allows to configure Kubermatic to use proxies to talk to the
   # world outside of its cluster.
   proxy:
