--- a/.prow/applications-catalog.yaml
+++ b/.prow/applications-catalog.yaml
@@ -35,8 +35,60 @@ presubmits:
           args:
             - "--application-name"
             - "argocd"
+            - "--application-namespace"
+            - "argocd"
             - "--application-version"
-            - "v2.10.0"
+            - "v2.13.4"
+            - "--app-label-key"
+            - "app.kubernetes.io/name"
+            - "--names"
+            - "argocd-application-controller,argocd-applicationset-controller,argocd-dex-server,argocd-notifications-controller,argocd-redis,argocd-repo-server,argocd-server"
+          env:
+            - name: KUBERMATIC_EDITION
+              value: ee
+            - name: SERVICE_ACCOUNT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: e2e-ci
+                  key: serviceAccountSigningKey
+          securityContext:
+            privileged: true
+          resources:
+            requests:
+              memory: 4Gi
+              cpu: 2
+            limits:
+              memory: 6Gi
+
+  - name: pre-kubermatic-appcatalog-cluster-autoscaler
+    run_if_changed: "(pkg/ee/default-application-catalog/cluster-autoscaler.yaml)"
+    decorate: true
+    clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
+    labels:
+      preset-aws-e2e-kkp: "true"
+      preset-kubeconfig-ci: "true"
+      preset-docker-mirror: "true"
+      preset-docker-pull: "true"
+      preset-docker-push: "true"
+      preset-kind-volume-mounts: "true"
+      preset-goproxy: "true"
+      preset-e2e-ssh: "true"
+    spec:
+      containers:
+        - image: quay.io/kubermatic/build:go-1.23-node-20-kind-0.24-4
+          command:
+            - "./hack/ci/run-default-application-e2e-test.sh"
+          args:
+            - "--application-name"
+            - "cluster-autoscaler"
+            - "--application-namespace"
+            - "kube-system"
+            - "--application-version"
+            - "1.32.0"
+            - "--app-label-key"
+            - "app.kubernetes.io/name"
+            - "--names"
+            - "clusterapi-cluster-autoscaler"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
@@ -75,8 +127,15 @@ presubmits:
           args:
             - "--application-name"
             - "cert-manager"
+            - "--application-namespace"
+            - "cert-manager"
             - "--application-version"
-            - "v1.14.1"
+            - "v1.16.3"
+            - "--app-label-key"
+            - "app.kubernetes.io/name"
+            - "--names"
+            - "cert-manager,cert-manager-cainjector,cert-manager-startupapicheck,cert-manager-webhook"
+
           env:
             - name: KUBERMATIC_EDITION
               value: ee
@@ -115,8 +174,14 @@ presubmits:
           args:
             - "--application-name"
             - "falco"
+            - "--application-namespace"
+            - "falco"
             - "--application-version"
-            - "0.37.0"
+            - "0.40.0"
+            - "--app-label-key"
+            - "app.kubernetes.io/name"
+            - "--names"
+            - "falco"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
@@ -154,9 +219,15 @@ presubmits:
             - "./hack/ci/run-default-application-e2e-test.sh"
           args:
             - "--application-name"
-            - "flux"
+            - "flux2"
+            - "--application-namespace"
+            - "flux2"
             - "--application-version"
-            - "2.2.2"
+            - "2.4.0"
+            - "--app-label-key"
+            - "app"
+            - "--names"
+            - "helm-controller,image-automation-controller,image-reflector-controller,kustomize-controller,notification-controller,source-controller"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
@@ -195,8 +266,60 @@ presubmits:
           args:
             - "--application-name"
             - "k8sgpt"
+            - "--application-namespace"
+            - "k8sgpt"
             - "--application-version"
-            - "v0.3.26"
+            - "v0.3.48"
+            - "--app-label-key"
+            - "app.kubernetes.io/name"
+            - "--names"
+            - "k8sgpt"
+          env:
+            - name: KUBERMATIC_EDITION
+              value: ee
+            - name: SERVICE_ACCOUNT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: e2e-ci
+                  key: serviceAccountSigningKey
+          securityContext:
+            privileged: true
+          resources:
+            requests:
+              memory: 4Gi
+              cpu: 2
+            limits:
+              memory: 6Gi
+
+  - name: pre-kubermatic-appcatalog-k8sgpt-operator
+    run_if_changed: "(pkg/ee/default-application-catalog/k8sgpt-app.yaml)"
+    decorate: true
+    clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
+    labels:
+      preset-aws-e2e-kkp: "true"
+      preset-kubeconfig-ci: "true"
+      preset-docker-mirror: "true"
+      preset-docker-pull: "true"
+      preset-docker-push: "true"
+      preset-kind-volume-mounts: "true"
+      preset-goproxy: "true"
+      preset-e2e-ssh: "true"
+    spec:
+      containers:
+        - image: quay.io/kubermatic/build:go-1.23-node-20-kind-0.24-4
+          command:
+            - "./hack/ci/run-default-application-e2e-test.sh"
+          args:
+            - "--application-name"
+            - "k8sgpt-operator"
+            - "--application-namespace"
+            - "k8sgpt-operator"
+            - "--application-version"
+            - "0.0.26"
+            - "--app-label-key"
+            - "app.kubernetes.io/name"
+            - "--names"
+            - "k8sgpt-operator"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
@@ -235,8 +358,14 @@ presubmits:
           args:
             - "--application-name"
             - "kube-vip"
+            - "--application-namespace"
+            - "kube-vip"
             - "--application-version"
-            - "v0.4.1"
+            - "v0.8.9"
+            - "--app-label-key"
+            - "app.kubernetes.io/name"
+            - "--names"
+            - "kube-vip"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
@@ -275,8 +404,14 @@ presubmits:
           args:
             - "--application-name"
             - "kubevirt"
+            - "--application-namespace"
+            - "kubevirt"
             - "--application-version"
             - "v1.1.0"
+            - "--app-label-key"
+            - "name"
+            - "--names"
+            - "cdi-operator,virt-operator"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
@@ -315,8 +450,14 @@ presubmits:
           args:
             - "--application-name"
             - "metallb"
+            - "--application-namespace"
+            - "metallb"
             - "--application-version"
-            - "v0.14.3"
+            - "v0.14.9"
+            - "--app-label-key"
+            - "app.kubernetes.io/name"
+            - "--names"
+            - "metallb"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
@@ -354,9 +495,15 @@ presubmits:
             - "./hack/ci/run-default-application-e2e-test.sh"
           args:
             - "--application-name"
-            - "nginx_ingress_controller"
+            - "nginx"
+            - "--application-namespace"
+            - "nginx"
             - "--application-version"
-            - "1.9.6"
+            - "1.12.0"
+            - "--app-label-key"
+            - "app.kubernetes.io/name"
+            - "--names"
+            - "ingress-nginx"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
@@ -394,9 +541,15 @@ presubmits:
             - "./hack/ci/run-default-application-e2e-test.sh"
           args:
             - "--application-name"
-            - "nvidia_gpu_operator"
+            - "gpu-operator"
+            - "--application-namespace"
+            - "gpu-operator"
             - "--application-version"
-            - "v23.9.1"
+            - "v24.9.1"
+            - "--app-label-key"
+            - "app.kubernetes.io/name"
+            - "--names"
+            - "gpu-operator,node-feature-discovery"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
@@ -435,8 +588,14 @@ presubmits:
           args:
             - "--application-name"
             - "trivy"
+            - "--application-namespace"
+            - "trivy"
             - "--application-version"
-            - "0.37.2"
+            - "0.58.1"
+            - "--app-label-key"
+            - "app.kubernetes.io/name"
+            - "--names"
+            - "trivy"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
@@ -475,8 +634,14 @@ presubmits:
           args:
             - "--application-name"
             - "trivy-operator"
+            - "--application-namespace"
+            - "trivy-operator"
             - "--application-version"
-            - "0.18.4"
+            - "0.23.0"
+            - "--app-label-key"
+            - "app.kubernetes.io/name"
+            - "--names"
+            - "trivy-operator"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
