--- a/charts/monitoring/kube-state-metrics/values.yaml
+++ b/charts/monitoring/kube-state-metrics/values.yaml
@@ -12,16 +12,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# More options can be found on the Upstream values file:
+# https://github.com/prometheus-community/helm-charts/blob/main/charts/kube-state-metrics/values.yaml
+
 kube-state-metrics:
   fullnameOverride: kube-state-metrics
-
-  # list of image pull secret references, e.g.
-  # imagePullSecrets:
-  #   - name: registry-k8s-io-pull-secret
   imagePullSecrets: []
   resources:
     requests:
-      # Rationalized based on real world usage
       cpu: 3m
       memory: 128Mi
     limits:
@@ -29,7 +27,6 @@ kube-state-metrics:
       memory: 384Mi
 
   # List of additional cli arguments to configure kube-state-metrics
-  # for example: --enable-gzip-encoding, --log-file, etc.
   # all the possible args can be found here: https://github.com/kubernetes/kube-state-metrics/blob/main/docs/developer/cli-arguments.md
   extraArgs:
   - --metric-labels-allowlist=pods=[app.kubernetes.io/name,app.kubernetes.io/component,app.kubernetes.io/instance,component,part-of,app,unit],deployments=[app.kubernetes.io/name,app.kubernetes.io/component,app.kubernetes.io/instance],persistentvolumeclaims=[excluded-from-alerts]
@@ -66,7 +63,7 @@ kube-state-metrics:
       - podAffinityTerm:
           labelSelector:
             matchLabels:
-              app: kube-state-metrics
+              app.kubernetes.io/name: kube-state-metrics
           topologyKey: kubernetes.io/hostname
         weight: 100
   
@@ -76,6 +73,7 @@ kube-state-metrics:
   podDisruptionBudget:
     maxUnavailable: 1
 
+  # Add /tmp as emptyDir, because readOnlyRootFilesystem is used.
   volumes:
   - name: tmp
     emptyDir: {}
@@ -101,34 +99,3 @@ kube-state-metrics:
 
   selfMonitor:
     enabled: true
-
-  # Enable vertical pod autoscaler support for kube-state-metrics
-  verticalPodAutoscaler:
-    enabled: false
-
-    # Recommender responsible for generating recommendation for the object.
-    # List should be empty (then the default recommender will generate the recommendation)
-    # or contain exactly one recommender.
-    # recommenders: []
-    # - name: custom-recommender-performance
-
-    # List of resources that the vertical pod autoscaler can control. Defaults to cpu and memory
-    controlledResources: []
-    # Specifies which resource values should be controlled: RequestsOnly or RequestsAndLimits.
-    # controlledValues: RequestsAndLimits
-
-    # Define the max allowed resources for the pod
-    maxAllowed: {}
-    # cpu: 200m
-    # memory: 100Mi
-    # Define the min allowed resources for the pod
-    minAllowed: {}
-    # cpu: 200m
-    # memory: 100Mi
-
-    # updatePolicy:
-      # Specifies minimal number of replicas which need to be alive for VPA Updater to attempt pod eviction
-      # minReplicas: 1
-      # Specifies whether recommended updates are applied when a Pod is started and whether recommended updates
-      # are applied during the life of a Pod. Possible values are "Off", "Initial", "Recreate", and "Auto".
-      # updateMode: Auto
