--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
@@ -1704,6 +1704,7 @@ spec:
                       enum:
                         - canal
                         - cilium
+                        - kubeovn
                         - none
                       type: string
                     version:
