--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
@@ -1698,6 +1698,7 @@ spec:
                       enum:
                         - canal
                         - cilium
+                        - kubeovn
                         - none
                       type: string
                     version:
