--- a/charts/monitoring/alertmanager/templates/template.yaml
+++ b/charts/monitoring/alertmanager/templates/template.yaml
@@ -1,4 +1,4 @@
-# Copyright 2020 The Kubermatic Kubernetes Platform contributors.
+# Copyright 2025 The Kubermatic Kubernetes Platform contributors.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,16 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{ if .Capabilities.APIVersions.Has "policy/v1" }}
-apiVersion: policy/v1
-{{ else }}
-apiVersion: policy/v1beta1
-{{ end }}
-kind: PodDisruptionBudget
+apiVersion: v1
+kind: ConfigMap
 metadata:
-  name: {{ template "name" . }}
-spec:
-  minAvailable: 1
-  selector:
-    matchLabels:
-      app: {{ template "name" . }}
+  name: kubermatic-altermanager-templates
+data:
+{{ (.Files.Glob "alertmanager-tmpl/*.tmpl").AsConfig | indent 2 }}
