support infra-csi-driver Signed-off-by: moadqassem <moad.qassem@gmail.com>
Signed-off-by: moadqassem <moad.qassem@gmail.com>

--- a/addons/csi/kubevirt/csi-driver-operator.yaml
+++ b/addons/csi/kubevirt/csi-driver-operator.yaml
@@ -399,6 +399,7 @@ metadata:
 spec:
   storageClasses:
 {{- range  .Cluster.KubeVirtInfraStorageClasses }}
+{{- if ne .VolumeProvisioner "infra-csi-driver" }}
    - infraStorageClassName: {{ .Name }}
      isDefaultClass: {{ .IsDefaultClass }}
 {{- if .VolumeBindingMode  }}
@@ -421,6 +422,7 @@ spec:
      labels:
 {{- range $key, $value := .Labels }}
        {{ $key }}: {{ $value }}
+{{- end }}
 {{- end }}
 {{- end }}
 {{- end }}
