fixes for cert-manager and k8sgpt
Signed-off-by: Iskren <iskren@kubermatic.com>

--- a/.prow/applications-catalog.yaml
+++ b/.prow/applications-catalog.yaml
@@ -273,7 +273,7 @@ presubmits:
             - "--app-label-key"
             - "app.kubernetes.io/name"
             - "--names"
-            - "k8sgpt"
+            - "k8sgpt-operator"
           env:
             - name: KUBERMATIC_EDITION
               value: ee
