--- a/.prow/applications-catalog.yaml
+++ b/.prow/applications-catalog.yaml
@@ -134,7 +134,7 @@ presubmits:
             - "--app-label-key"
             - "app.kubernetes.io/name"
             - "--names"
-            - "cert-manager,cert-manager-cainjector,cert-manager-startupapicheck,cert-manager-webhook"
+            - "cert-manager,cainjector,webhook"
 
           env:
             - name: KUBERMATIC_EDITION
