--- a/.prow/applications-catalog.yaml
+++ b/.prow/applications-catalog.yaml
@@ -14,6 +14,52 @@
 
 
 presubmits:
+  - name: pre-kubermatic-appcatalog-aikits
+    run_if_changed: "(pkg/ee/default-application-catalog/argocd-app.yaml)"
+    decorate: true
+    clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
+    labels:
+      preset-aws-e2e-kkp: "true"
+      preset-kubeconfig-ci: "true"
+      preset-docker-mirror: "true"
+      preset-docker-pull: "true"
+      preset-docker-push: "true"
+      preset-kind-volume-mounts: "true"
+      preset-goproxy: "true"
+      preset-e2e-ssh: "true"
+    spec:
+      containers:
+        - image: quay.io/kubermatic/build:go-1.23-node-20-kind-0.24-4
+          command:
+            - "./hack/ci/run-default-application-e2e-test.sh"
+          args:
+            - "--application-name"
+            - "aikit"
+            - "--application-namespace"
+            - "aikit"
+            - "--application-version"
+            - "v0.16.0"
+            - "--app-label-key"
+            - "app.kubernetes.io/name"
+            - "--names"
+            - "aikit"
+          env:
+            - name: KUBERMATIC_EDITION
+              value: ee
+            - name: SERVICE_ACCOUNT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: e2e-ci
+                  key: serviceAccountSigningKey
+          securityContext:
+            privileged: true
+          resources:
+            requests:
+              memory: 4Gi
+              cpu: 2
+            limits:
+              memory: 6Gi
+
   - name: pre-kubermatic-appcatalog-argocd
     run_if_changed: "(pkg/ee/default-application-catalog/argocd-app.yaml)"
     decorate: true
