update kyverno policy spec
Signed-off-by: Adonis Murati <adonismurati@gmail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_policytemplates.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_policytemplates.yaml
@@ -89,6 +89,7 @@ spec:
               required:
                 - description
                 - enforced
+                - kyvernoPolicySpec
                 - title
                 - visibility
               type: object
