--- a/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
@@ -111,6 +111,17 @@ spec:
                         enforced.
                       type: boolean
                   type: object
+                clusterBackupOptions:
+                  properties:
+                    defaultChecksumAlgorithm:
+                      description: |-
+                        DefaultChecksumAlgorithm allows setting a default checksum algorithm used by Velero for uploading objects to S3.
+                        If the value is set as empty string "", no checksum will be calculated and attached to
+                        the request headers.
+
+                        Optional
+                      type: string
+                  type: object
                 customLinks:
                   description: CustomLinks are additional links that can be shown the dashboard's footer.
                   items:
